<resources>
    <string name="app_name">Remoney</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_loans">Loans</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">Violet Evergarden</string>
    <string name="profile_username">\@violetchan</string>
    <string name="month_expenses">This month expenses</string>
    <string name="expenses">Rp 2.000.000</string>
    <string name="content">Description</string>
    <string name="date">Date</string>
    <string name="timeframe">Timeframe</string>
    <string name="category">Category</string>
    <string name="timeframevalue">Daily</string>
    <string name="category_value">Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_transaction">New Transaction</string>
    <string name="food">Food</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="name">Name</string>
    <string name="name_requirements">max 20 characters</string>
    <string name="nominal">Nominal</string>
    <string name="nominal_requirements">the amount of expenses</string>
    <string name="name_placeholder">Enter name</string>
    <string name="nominal_placeholder">Enter nominal</string>
    <string name="additional">Additional Info</string>
    <string name="additional_requirements">max 200 characters</string>
    <string name="additional_placeholder">Enter additional info</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="remoney">Remoney</string>
    <string name="description">All about \'Hutang Piutang\'</string>
    <string name="todo">TODO</string>
</resources>