<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#FFFFFF"
    app:cardCornerRadius="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/new_transaction"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideLineHeader"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toTopOf="@+id/constraintContainer" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="46dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="76dp" />

        <TextView
            android:id="@+id/tvSeparateHeader"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#E6E6E6"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/guideLineHeader" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/category"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/tvSeparateHeader" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategoryText"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#EAE9EA"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideLineRight"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvCategoryValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/food"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategoryIcon"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#535263"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@id/tvCategory">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/category"
                android:src="@drawable/category_food" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/date_time"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/cvCategoryText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDateTime"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#EAE9EA"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTime">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvDateTimeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/inter"
                    android:text="[icon] 16 March 2022 19:20"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/name"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/cvDateTime" />

        <TextView
            android:id="@+id/tvNameRequirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/name_requirements"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintContainer"
            app:layout_constraintTop_toBottomOf="@+id/cvDateTime" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="#EAE9EA"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter name" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>